Fixes Tanitian website.  Now works as a page within the website.

--- a/taniti/index.html
+++ b/taniti/index.html
@@ -52,7 +52,7 @@
     	        	  <input class="hidden" value="s-d12245cc-1680-458d-89dd-4f0d7fb22724"></input>
     	        	  <div class="top-border"></div>
     	        	  <ins class="icon">&nbsp;</ins>
-    	        	  <a  href="screens/d12245cc-1680-458d-89dd-4f0d7fb22724" tabindex="-1">Home Page</a>
+    	        	  <a  href="./screens/d12245cc-1680-458d-89dd-4f0d7fb22724" tabindex="-1">Home Page</a>
     	        	  <span class="menu_dotred"></span>
     	          </div>
     	        </li>
@@ -67,7 +67,7 @@
     	        	  <input class="hidden" value="sc-bb8abf58-f55e-472d-af05-a7d1bb0cc014"></input>
     	        	  <div class="top-border"></div>
     	        	  <ins class="icon">&nbsp;</ins>
-    	        	  <a  href="scenarios/bb8abf58-f55e-472d-af05-a7d1bb0cc014" tabindex="-1">Board 1</a>
+    	        	  <a  href="./scenarios/bb8abf58-f55e-472d-af05-a7d1bb0cc014" tabindex="-1">Board 1</a>
     	        	  <span class="menu_dotred"></span>
     	          </div>
     	        </li>
@@ -157,7 +157,7 @@
             <div id="topInfo"class="" onselectstart="return false;">
                 <div id="infoContent">
                     <div class="leftcontrols">
-                        <div id="logo" class="section"><img alt="logo" src="resources/jim/images/sidepanel/logo@2x.png"></img></div>
+                        <div id="logo" class="section"><img alt="logo" src="./resources/jim/images/sidepanel/logo@2x.png"></img></div>
                         <div class="comments-separator"></div>
                         <div id="info" class="section info-text-label">
                             <span id="projectname" title="Tanitian Website">Tanitian Website</span>
@@ -318,7 +318,7 @@
           <span class="title">User Profile</span>
           <form class="user-profile firer" enctype="multipart/form-data" method="post">
             <div id="user-img-wrapper">
-                <img id="dialog-user-img" src="resourcesim/images/sidepanel/nopicture_icon.png"/>
+                <img id="dialog-user-img" src="./resources/jim/images/sidepanel/nopicture_icon.png"/>
                 <div id="change-img-clipping">
                     <div id="change-img-button"></div>
                     <span>UPLOAD PICTURE</span>
@@ -442,7 +442,7 @@
                       ]]>
     </script>
     <!-- END COMMENT TEMPLATES -->
-    <script type="text/javascript" src="reviewncludes/include-1741475409402.js" class="canvasjs"></script>
+    <script type="text/javascript" src="./review/includes/include-1741475409402.js" class="canvasjs"></script>
     <script type="text/javascript">(function(){jimMain.init("screens/d12245cc-1680-458d-89dd-4f0d7fb22724");})();</script>
   </body>
 </html>
